data/all_generated_tests/raw_wast_tests/call_indirect_EdgeCaseFailuresinbr_table_4663.wast
;; 2. **Test Description**: Test with a `call_indirect` instruction where the provided table index is negative, expecting a trap.    - **Constraint Checked**: Verifies proper handling of invalid negative table indices.    - **Relation to `br_table` Edge Case**: Ensures boundary conditions on table index values are enforced, akin to index bounds in `br_table`.

(assert_invalid
  (module
    (type (func (param i32)))
    (table 1 funcref)
    (func $negative-index (call_indirect (type 0) (i32.const -1) (i32.const 1)))
  )
  "type mismatch"
)